--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Co-Invoice</title>    
+    <title>Co-Invoice – Modern Invoice Generator</title>
+    <meta name="description" content="Co-Invoice is a modern, professional, and open-source invoice generator. Create, customize, and export beautiful invoices with ease." />
+    <meta name="keywords" content="invoice, generator, invoice generator, billing, React, Tailwind CSS, open-source, PDF invoices" />
   </head>
   <body>
     <div id="root"></div>
